--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 server.port=8787
 
-some.apikey=f9f1f528312a41cca4e2fada6bf47247
+spring.demo.quantityOfNews=2
 
-some.quantityOfNews=2
-
+spring.demo.apikey=&apiKey=f9f1f528312a41cca4e2fada6bf47247
